[tool.poetry]
name = "auto-port-config"
version = "0.1.0"
description = "Script to help configure ports during commissioning."
authors = ["alphabet5 <1178293+alphabet5@users.noreply.github.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.12.0"
napalm = "^3.3.1"
ciscoconfparse = "^1.5.51"
yamlarg = "^0.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
